# App-Market

./: .env.example  .eslintrc.json  .gitignore  ACCESS_CONTROL_AUDIT.md  API_SECURITY_AUDIT.md  AUDIT-REPORT-3.md  AUDIT_CONTEXT_REPORT.md  AUTHENTICATION_DEBUG.md  AUTH_SECURITY_AUDIT.md  Anchor.toml  BUILD_ISSUES.md  BUSINESS_LOGIC_AUDIT.md  CLAUDE.md  CRYPTOGRAPHY_AUDIT.md  DATABASE_SECURITY_AUDIT.md  DATABASE_SETUP_PRODUCTION.md  DEPLOYMENT.md  DIFFERENTIAL_REVIEW_REPORT.md  DISCLOSURE_TODO.md  EMERGENCY_PROCEDURES.md  ENTRY_POINT_ANALYSIS.md  ENV_CONFIG_AUDIT.md  FINAL_SECURITY_STATUS.md  FIX_REVIEW_REPORT.md  FRONTEND_BACKEND_TODO.md  FRONTEND_SECURITY_AUDIT.md  FUTURE_FEATURES.md  IMPLEMENTATION_SUMMARY.md  INPUT_VALIDATION_AUDIT.md  INSECURE_DEFAULTS_REPORT.md  KNOWN_LIMITATIONS.md  MASTER_SECURITY_SUMMARY.md  PAYMENT_SECURITY_AUDIT.md  PERFORMANCE_TODO.md  PLATFORM_FEES.md  PRODUCTION_FIX.md  RATE_LIMITING_AUDIT.md  README.md  SECOND_SECURITY_AUDIT.md  SECURITY.md  (+33 more)
.claude/: settings.json
.github/: PR_TEMPLATE.md  dependabot.yml
.supply-chain-risk-auditor/: agentic-actions-report.md  audit-context-report.md  differential-review-report.md  insecure-defaults-report.md  property-testing-report.md  results.md  sharp-edges-report.md
app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  page.tsx
components/: providers.tsx  scroll-to-top.tsx
docs/: ENV_VARIABLES_EXPLAINED.md
hooks/: useAutoWalletAuth.ts  useConfirmDialog.tsx  useCountdown.ts  useCsrf.ts  useMessages.ts  useNotifications.ts  (+1 more)
programs/app-market/: Cargo.toml
programs/app-market/src/: lib.rs
(+456 files in other folders)
