[package]
name = "app-market"
version = "0.1.0"
description = "App Market Escrow Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "app_market"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
